--- a/day30/09-quiz.html
+++ b/day30/09-quiz.html
@@ -9,7 +9,7 @@
         .test {
             width: 1200px;
             margin: auto;
-            border: 1px solid lightgrey;
+            border: 2px solid black;
         }
 
         .header {
