--- a/day31/10-calculator.html
+++ b/day31/10-calculator.html
@@ -6,6 +6,8 @@
         <title>10-calculator.html</title>
         <style>
             #frame {
+                display: flex;
+                flex-flow: wrap;
                 width: 400px;
                 height: 650px;
                 border: 1px solid black;
@@ -14,6 +16,7 @@
             }
 
             #header {
+                width: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -34,6 +37,7 @@
             }
 
             #main {
+                width: 100%;
                 display: flex;
                 justify-content: space-between;
             }
@@ -54,12 +58,11 @@
             }
 
             #main_numspace {
+                width: 100%;
                 display: flex;
                 margin-right: 20px;
                 justify-content: flex-end;
-            }
-
-            #main_numspace {
+                
             }
 
             #calc > ul {
