--- a/day31/10-calculator.html
+++ b/day31/10-calculator.html
@@ -6,13 +6,14 @@
         <title>10-calculator.html</title>
         <style>
             #frame {
+                user-select: none;
                 display: flex;
                 flex-flow: wrap;
                 width: 400px;
-                height: 650px;
                 border: 1px solid black;
                 margin: auto;
                 box-shadow: 1px 1px 5px 2px grey;
+                background-color: #fafafa;
             }
 
             #header {
@@ -27,6 +28,11 @@
                 margin-left: 20px;
             }
 
+            a {
+                text-decoration: none;
+                color: black;
+            }
+
             #header_items {
                 display: flex;
                 cursor: pointer;
@@ -35,6 +41,7 @@
             #header_items > h3 {
                 margin: 10px;
             }
+
 
             #main {
                 width: 100%;
@@ -45,16 +52,29 @@
             #main_menu {
                 display: flex;
                 cursor: pointer;
+                
+            }
+
+            #main_menu > h2:hover{
+                background-color: #ccc;
             }
 
             #main_menu > h2 {
+                border-radius: 5px;
+                margin: 0px;
                 display: flex;
-                margin: 10px;
+                padding: 10px 20px;
             }
 
             #main_history > h2 {
-                margin: 10px;
+                border-radius: 5px;
+                margin: 0px;
                 cursor: pointer;
+                padding: 10px 20px;
+            }
+
+            #main_history :hover {
+                background-color: #ccc;
             }
 
             #main_numspace {
@@ -74,6 +94,7 @@
             }
 
             ul > li {
+                border-radius: 5px;
                 padding: 10px 20px;
             }
 
@@ -102,24 +123,24 @@
             }
 
             td {
+                width: 25%;
+                height: 40px;
                 font-size: 20px;
                 border: 1px solid #ccc;
                 border-radius: 5px;
                 box-shadow: 1px 1px 1px grey;
                 justify-content: center;
                 text-align: center;
+                background-color: white;
             }
-
             td:hover {
-                background-color: aliceblue;
+                background-color: #fafafa;
             }
-
             #equal {
                 background-color: blue;
                 color: white;
                 font-weight: 700;
             }
-
             #equal:hover {
                 background-color: cornflowerblue;
             }
@@ -128,14 +149,13 @@
     <body>
         <div id="frame">
             <div id="header">
-                <div id="header_name"><h3>🖩계산기</h3></div>
+                <div id="header_name"><h3>🖩 계산기</h3></div>
                 <div id="header_items">
                     <h3>─</h3>
                     <h3>□</h3>
-                    <h3>X</h3>
+                    <h3><a href='javascript:self.close();'>X</a></h3>
                 </div>
             </div>
-
             <div id="main">
                 <div id="main_menu">
                     <h2 title="탐색 열기">☰</h2>
@@ -170,7 +190,7 @@
                     <tr>
                         <td>⅟x</td>
                         <td>x²</td>
-                        <td>√x</td>
+                        <td><sup>2</sup>√x</td>
                         <td>÷</td>
                     </tr>
                     <tr>
