커밋다시하기

--- a/day32/06-naverlogin.html
+++ b/day32/06-naverlogin.html
@@ -2,8 +2,14 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>06-naverlogin.html</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+        />
+        <title>네이버 : 로그인</title>
+        <link rel="icon" href="naver.webp" />
+        <link rel="apple-touch-icon" href="naver.webp" />
         <style>
             td {
                 padding: 5px 10px;
