--- a/day33/02-style.html
+++ b/day33/02-style.html
@@ -30,8 +30,21 @@
         </style>
     </head>
     <body>
-        <h1>02-style.html</h1>
+        <h1 style="text-align: center">02-style.html</h1>
         <hr />
+
+        <div
+            style="
+                position: absolute;
+                top: 200px;
+                left: 100px;
+                width: 200px;
+                height: 200px;
+                background-color: rgba(255, 0, 0, 0.5);
+                border-radius: 100px 50px 20px 40px;
+                z-index: 1;
+            "
+        ></div>
 
         <table>
             <tr>
@@ -93,7 +106,13 @@
 
             <tr>
                 <td>width, height</td>
-                <td>영역의 너비와 높이를 지정</td>
+                <td>
+                    영역의 너비와 높이를 지정 <br />
+                    <ul>
+                        <li>vw : 문서 전체를 기준으로 너비 비율</li>
+                        <li>vh : 문서 전체를 기준으로 높이 비율</li>
+                    </ul>
+                </td>
             </tr>
 
             <tr>
