--- a/day39/13-sort4.html
+++ b/day39/13-sort4.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>13-sort4.html</title>
+        <style></style>
     </head>
     <body>
         <h1>13-sort4.html</h1>
